test_cases/bad/struct_duplicate_members.lat
class foo {
    int x, y, z;
    string v, w, x;
}

int main() {
    return 0;
}

